--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <a href="index.html" class="home-link"> Patricks Geburtstagparty 23.05.2020 </a>
       </header>
       <div class="photo-box">
+        <figcaption> Kücheneckli</figcaption>
         <img src="./images/photos/kueche.png" alt="Gallery" width=300 class="gallery-img">
+        <figcaption> Kunsteckli</figcaption>
+        <img src="./images/photos/kunst.png" alt="Gallery" width=600 class="gallery-img">
       </div>
       <footer>
         23.05.2020, zum 28. Geburtag von Patrick
