--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   <body>
     <div class="main-grid">
       <header class=bg-blue>
-        <a href="index.html" class="home-link"> Patricks Geburtstagparty 23.05.2020 </a>
+        <a href="index.html" class="home-link"> Elis und Patricks Geburtstagparty 23.05.2020 </a>
       </header>
       <div class="photo-box">
+        <figcaption> Gruppenfoto</figcaption>
+        <img src="./images/photos/gruppe.png" alt="Gallery" width=800 class="gallery-img">
         <figcaption> Kücheneckli</figcaption>
         <img src="./images/photos/kueche.png" alt="Gallery" width=300 class="gallery-img">
         <figcaption> Kunsteckli</figcaption>
         <img src="./images/photos/kunst.png" alt="Gallery" width=600 class="gallery-img">
       </div>
       <footer>
-        23.05.2020, zum 28. Geburtag von Patrick
+        23.05.2020, zum Geburtstag von Patrick und Eli
       </footer>
     </div>
 
