feat: Add photos

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <a href="index.html" class="home-link"> Elis und Patricks Geburtstagparty 23.05.2020 </a>
       </header>
       <div class="photo-box">
-        <figcaption> Gruppenfoto</figcaption>
+        <figcaption> Gruppenfotos</figcaption>
         <img src="./images/photos/gruppe.png" alt="Gallery" width=800 class="gallery-img">
+        <img src="./images/photos/gruppe_2.png" alt="Gallery" width=800 class="gallery-img">
         <figcaption> Kücheneckli</figcaption>
         <img src="./images/photos/kueche.png" alt="Gallery" width=300 class="gallery-img">
         <figcaption> Kunsteckli</figcaption>
