feat: Add audio

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <figcaption> Kücheneckli</figcaption>
         <img src="./images/photos/kueche.png" alt="Gallery" width=300 class="gallery-img">
         <figcaption> Kunsteckli</figcaption>
+        <audio controls style="width: 600px; margin: 10px">
+          <source src="./audio/guitar.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio> 
         <img src="./images/photos/kunst.png" alt="Gallery" width=600 class="gallery-img">
       </div>
       <footer>
